Code Updated of Contact form

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@ html {
 }
 
 body{background: #1e2042;
-    overflow: hidden;}
+    overflow-x: hidden;}
 
 /* .brand h2{
   color: var(--color-secondary);
