--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
 }
 html {
   scroll-behavior: smooth;
-   transition: background-color 0.4s ease, color 0.4s ease;
+   transition: background-color 0.4s ease-in, color 0.4s ease-in;
 }
 
 body{overflow-x: hidden;}
